--- a/MasterPage.master
+++ b/MasterPage.master
@@ -8,40 +8,27 @@
 <title>Book Store Template, Free CSS Template, CSS Website Layout</title>
 <meta name="keywords" content="Book Store Template, Free CSS Template, CSS Website Layout, CSS, HTML" />
 <meta name="description" content="Book Store Template, Free CSS Template, Download CSS Website" />
-<link href="design.css" rel="stylesheet" type="text/css" />
-</head>
+<link href="css/design.css" rel="stylesheet" type="text/css" />
+</head>
+
 <body>
-<!--  Free CSS Templates from www.templatemo.com  asdasdasd-->
+
 <div id="templatemo_container">
 	<div id="templatemo_menu">
     	<ul>
             <li><a href="index.html" class="current">Home</a></li>
             <li><a href="subpage.html">Search</a></li>
-            <li><a href="subpage.html">Books</a></li>            
-            <li><a href="subpage.html">New Releases</a></li>  
-            <li><a href="#">Company</a></li> 
-            <li><a href="#">Contact</a></li>
+            <li><a href="subpage.html">About</a></li>            
+            <li><a href="subpage.html">FAQs</a></li>  
+            
     	</ul>
     </div> <!-- end of menu -->
     
     <div id="templatemo_header">
-    	<div id="templatemo_special_offers">
-        	<p>
-                <span>25%</span> discounts for
-        purchase over $80
-        	</p>
-			<a href="subpage.html" style="margin-left: 50px;">Read more...</a>
-        </div>
+    	
         
         
-        <div id="templatemo_new_books">
-        	<ul>
-                <li>Suspen disse</li>
-                <li>Maece nas metus</li>
-                <li>In sed risus ac feli</li>
-            </ul>
-            <a href="subpage.html" style="margin-left: 50px;">Read more...</a>
-        </div>
+        
     </div> <!-- end of header -->
     
     <asp:ContentPlaceHolder ID="Content1" runat="server"></asp:ContentPlaceHolder>
