--- a/css/design.css
+++ b/css/design.css
@@ -1,15 +1,14 @@
-
+﻿
 body {
 	margin: 0;
 	padding: 0;
-	line-height: 1.5em;
+    line-height: 1.5em;
 	font-family: Verdana, Arial, san-serif;
 	font-size: 11px;
 	color: #ffffff;
 	background: #ffffff;
-    background: url('../images/bg.jpg');
+    background: url('images/bg.jpg');
 }
-
 a:link, a:visited { color: #e6e154; text-decoration: none; font-weight: bold;} 
 a:active, a:hover { color: #e6e154; text-decoration: underline;}
 
@@ -53,7 +52,7 @@ img {
 	width: 100px;
 	padding: 4px 0 5px 0;
 	margin-bottom: 10px; 
-	background: url('../images/templatemo_btn_02.jpg') no-repeat;
+	background: url('images/templatemo_btn_02.jpg') no-repeat;
 	color: #FFFFFF;
 	font-weight: bold;
 	text-decoration: none;
@@ -66,7 +65,7 @@ img {
 	width: 100px;
 	padding: 4px 0 5px 0;
 	margin-bottom: 10px; 
-	background: url('../images/templatemo_btn_01.jpg') no-repeat;
+	background: url('images/templatemo_btn_01.jpg') no-repeat;
 	color: #ffffff;
 	font-weight: bold;
 	text-decoration: none;
@@ -77,7 +76,8 @@ img {
 	margin: auto;
 	padding: 0 10px;
 	background: white;
-
+    
+    
 	
 }
 
@@ -86,15 +86,15 @@ img {
 
 #templatemo_menu {
 	clear: both;
-	width: 1300px;
+	width: 845px;
 	height: 45px;
-	background: url('../images/bg.jpg') repeat-x;
-	margin: 0 -10px;
+	background: url('images/bg.jpg') repeat-x;
+	margin: auto;
 }
 
 #templatemo_menu ul {
 	padding: 13px 0 0 0;
-	margin: 0 0 0 250px;
+	margin: 0 0 0 220px;
 	list-style: none;
 	width: 100%;
 }
@@ -129,8 +129,8 @@ img {
 	width: 940px;
 	height: 300px;
 	margin-bottom:50px;
-    background: url(../images/bg.jpg) repeat;
-	background: url('../images/reading.jpg') no-repeat center; 
+    background: url('images/bg.jpg') repeat;
+	background: url('images/reading.jpg') no-repeat center; 
 	opacity : 0.9;
 	padding: 0 0;
     margin-left: auto;
@@ -257,7 +257,7 @@ img {
 	margin: 0 0 20px 0;
 	font-size: 15px;
 	color: white;
-	background: url('../images/header-bg.jpg') repeat-x;
+	background: url('images/header-bg.jpg') repeat-x;
 }
 
 #templatemo_content_right h2 {
@@ -324,7 +324,7 @@ img {
 	text-align: center;
 	border-top: 1px solid #25211e;
 	color: #999;
-	background-color: #7E3817;
+	background-color: #A37547;
 	margin: auto;
 }
 
