--- a/MasterPage.master
+++ b/MasterPage.master
@@ -11,27 +11,27 @@
 <link href="css/design.css" rel="stylesheet" type="text/css" />
 </head>
 
-<body>
-<div id="templatemo_menu">
-    	<ul>
-            <li><a href="index.html" class="current">Home</a></li>
-            <li><a href="subpage.html">Search</a></li>
-            <li><a href="subpage.html">About</a></li>            
-            <li><a href="subpage.html">FAQs</a></li>  
+<body runat="server">
+<div id="templatemo_menu" runat="server">
+    	<ul runat="server">
+            <li runat="server"><a href="index.html" class="current" runat="server">Home</a></li>
+            <li runat="server"><a href="subpage.html" runat="server">Search</a></li>
+            <li runat="server"><a href="subpage.html" runat="server">About</a></li>            
+            <li runat="server"><a href="subpage.html" runat="server">FAQs</a></li>  
             
     	</ul>
     </div> <!-- end of menu -->
-<div id="templatemo_container">
+<div id="templatemo_container" runat="server">
 	
     
     
     
     <asp:ContentPlaceHolder ID="Content1" runat="server"></asp:ContentPlaceHolder>
     
-    <div id="templatemo_footer">
+    <div id="templatemo_footer" runat="server">
     
-	       <a href="subpage.html">Home</a> | <a href="subpage.html">Search</a> | <a href="subpage.html">Books</a> | <a href="#">New Releases</a> | <a href="#">FAQs</a> | <a href="#">Contact Us</a><br />
-        Copyright © 2024 <a href="#"><strong>Danche</strong></a> | Designed by Danica Nikoloska & Goran Gjorgievski	</div> 
+	       <a href="subpage.html" runat="server">Home</a> | <a href="subpage.html" runat="server">Search</a> | <a href="subpage.html" runat="server">Books</a> | <a href="#" runat="server">New Releases</a> | <a href="#" runat="server">FAQs</a> | <a href="#" runat="server">Contact Us</a><br />
+        Copyright © 2024 <a href="#" runat="server"><strong runat="server">Danche</strong></a> | Designed by Danica Nikoloska & Goran Gjorgievski	</div> 
     <!-- end of footer -->
 <!--  Free CSS Template www.templatemo.com -->
 </div> <!-- end of container -->
