--- a/MasterPage.master
+++ b/MasterPage.master
@@ -9,17 +9,142 @@
 <meta runat="server" name="keywords" content="Book Store Template, Free CSS Template, CSS Website Layout, CSS, HTML" />
 <meta runat="server" name="description" content="Book Store Template, Free CSS Template, Download CSS Website" />
 <link runat="server" href="css/design.css" rel="stylesheet" type="text/css" />
+<link runat="server" href="css/style.css" rel="stylesheet" type="text/css" />
+ <script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
+<script type="text/javascript" src="js/jquery.leanModal.min.js"></script>
 </head>
 
 <body runat="server">
 <div id="templatemo_menu" runat="server">
     	<ul runat="server">
-            <li runat="server"><a href="index.html" class="current" runat="server">Home</a></li>
-            <li runat="server"><a href="subpage.html" runat="server">Search</a></li>
-            <li runat="server"><a href="subpage.html" runat="server">About</a></li>            
-            <li runat="server"><a href="subpage.html" runat="server">FAQs</a></li>  
+            <li runat="server"><a href="index.html" class="current" runat="server">Дома</a></li>
+            <li runat="server"><a href="subpage.html" runat="server">Книги</a></li>
+            <li runat="server"><a href="subpage.html" runat="server">За нас</a></li>            
+            <li runat="server"><a href="subpage.html" runat="server">ЧПП</a></li>  
             
     	</ul>
+    <div runat="server" id="login">
+        <div class="container">
+	<a id="modal_trigger" href="#modal" class="btn">Login/Register</a>
+
+	<div id="modal" class="popupContainer" style="display:none;">
+		<header class="popupHeader">
+			<span class="header_title">Login</span>
+			<span class="modal_close"><i class="fa fa-times"></i></span>
+		</header>
+		
+		<section class="popupBody">
+			<!-- Social Login -->
+			<div class="social_login">
+				<div class="">
+					<a href="#" class="social_box fb">
+						<span class="icon"><i class="fa fa-facebook"></i></span>
+						<span class="icon_title">Connect with Facebook</span>
+						
+					</a>
+
+					<a href="#" class="social_box google">
+						<span class="icon"><i class="fa fa-google-plus"></i></span>
+						<span class="icon_title">Connect with Google</span>
+					</a>
+				</div>
+
+				<div class="centeredText">
+					<span>Or use your Email address</span>
+				</div>
+
+				<div class="action_btns">
+					<div class="one_half"><a href="#" id="login_form" class="btn">Login</a></div>
+					<div class="one_half last"><a href="#" id="register_form" class="btn">Sign up</a></div>
+				</div>
+			</div>
+
+			<!-- Username & Password Login form -->
+			<div class="user_login">
+				<form>
+					<label>Email / Username</label>
+					<input type="text" />
+					<br />
+
+					<label>Password</label>
+					<input type="password" />
+					<br />
+
+					<div class="checkbox">
+						<input id="remember" type="checkbox" />
+						<label for="remember">Remember me on this computer</label>
+					</div>
+
+					<div class="action_btns">
+						<div class="one_half"><a href="#" class="btn back_btn"><i class="fa fa-angle-double-left"></i> Back</a></div>
+						<div class="one_half last"><a href="#" class="btn btn_red">Login</a></div>
+					</div>
+				</form>
+
+				<a href="#" class="forgot_password">Forgot password?</a>
+			</div>
+
+			<!-- Register Form -->
+			<div class="user_register">
+				<form>
+					<label>Full Name</label>
+					<input type="text" />
+					<br />
+
+					<label>Email Address</label>
+					<input type="email" />
+					<br />
+
+					<label>Password</label>
+					<input type="password" />
+					<br />
+
+					<div class="checkbox">
+						<input id="send_updates" type="checkbox" />
+						<label for="send_updates">Send me occasional email updates</label>
+					</div>
+
+					<div class="action_btns">
+						<div class="one_half"><a href="#" class="btn back_btn"><i class="fa fa-angle-double-left"></i> Back</a></div>
+						<div class="one_half last"><a href="#" class="btn btn_red">Register</a></div>
+					</div>
+				</form>
+			</div>
+		</section>
+	</div>
+</div>
+
+<script type="text/javascript">
+    $("#modal_trigger").leanModal({ top: 200, overlay: 0.6, closeButton: ".modal_close" });
+
+    $(function () {
+        // Calling Login Form
+        $("#login_form").click(function () {
+            $(".social_login").hide();
+            $(".user_login").show();
+            return false;
+        });
+
+        // Calling Register Form
+        $("#register_form").click(function () {
+            $(".social_login").hide();
+            $(".user_register").show();
+            $(".header_title").text('Register');
+            return false;
+        });
+
+        // Going back to Social Forms
+        $(".back_btn").click(function () {
+            $(".user_login").hide();
+            $(".user_register").hide();
+            $(".social_login").show();
+            $(".header_title").text('Login');
+            return false;
+        });
+
+    })
+</script>
+    </div>
     </div> <!-- end of menu -->
 <div id="templatemo_container" runat="server">
 	
@@ -30,7 +155,7 @@
     
     <div id="templatemo_footer" runat="server">
     
-	       <a href="subpage.html" runat="server">Home</a> | <a href="subpage.html" runat="server">Search</a> | <a href="subpage.html" runat="server">Books</a> | <a href="#" runat="server">New Releases</a> | <a href="#" runat="server">FAQs</a> | <a href="#" runat="server">Contact Us</a><br />
+	       <a href="subpage.html" runat="server">Дома</a> | <a href="subpage.html" runat="server">Книги</a> | <a href="#" runat="server">За нас</a> | <a href="#" runat="server">ЧПП</a><br />
         Copyright © 2024 <a href="#" runat="server"><strong runat="server">Danche</strong></a> | Designed by Danica Nikoloska & Goran Gjorgievski	</div> 
     <!-- end of footer -->
 <!--  Free CSS Template www.templatemo.com -->
