--- a/MasterPage.master
+++ b/MasterPage.master
@@ -2,8 +2,8 @@
 
 <!DOCTYPE html>
 
-<html xmlns="http://www.w3.org/1999/xhtml" runat="server">
-<head runat="server">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head >
 <meta runat="server" http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title runat="server">Book Store Template, Free CSS Template, CSS Website Layout</title>
 <meta runat="server" name="keywords" content="Book Store Template, Free CSS Template, CSS Website Layout, CSS, HTML" />
@@ -14,23 +14,23 @@
 <script type="text/javascript" src="js/jquery.leanModal.min.js"></script>
 </head>
 
-<body runat="server">
-<div id="templatemo_menu" runat="server">
-    	<ul runat="server">
-            <li runat="server"><a href="index.html" class="current" runat="server">Дома</a></li>
-            <li runat="server"><a href="subpage.html" runat="server">Книги</a></li>
-            <li runat="server"><a href="subpage.html" runat="server">За нас</a></li>            
-            <li runat="server"><a href="subpage.html" runat="server">ЧПП</a></li>  
+<body >
+<div id="templatemo_menu" >
+    	<ul >
+            <li ><a href="index.html" class="current" >Дома</a></li>
+            <li ><a href="subpage.html" >Книги</a></li>
+            <li ><a href="subpage.html" >За нас</a></li>            
+            <li ><a href="subpage.html" >ЧПП</a></li>  
             
     	</ul>
-    <div runat="server" id="login">
+    <form id="login" runat="server">
         <div class="container">
 	<a id="modal_trigger" href="#modal" class="btn">Login/Register</a>
 
 	<div id="modal" class="popupContainer" style="display:none;">
 		<header class="popupHeader">
 			<span class="header_title">Login</span>
-			<span class="modal_close"><i class="fa fa-times"></i></span>
+			<span class="modal_close">Close</span>
 		</header>
 		
 		<section class="popupBody">
@@ -61,13 +61,14 @@
 
 			<!-- Username & Password Login form -->
 			<div class="user_login">
-				<form>
-					<label>Email / Username</label>
-					<input type="text" />
+				<div>
+					<label>Email</label>
+					 <asp:TextBox id="email"  runat="server"></asp:TextBox>
 					<br />
 
 					<label>Password</label>
-					<input type="password" />
+					
+                     <asp:TextBox ID="password" runat="server"></asp:TextBox>
 					<br />
 
 					<div class="checkbox">
@@ -76,17 +77,25 @@
 					</div>
 
 					<div class="action_btns">
-						<div class="one_half"><a href="#" class="btn back_btn"><i class="fa fa-angle-double-left"></i> Back</a></div>
-						<div class="one_half last"><a href="#" class="btn btn_red">Login</a></div>
-					</div>
-				</form>
+						<div class="one_half">
+                            <a href="#" class="btn back_btn"><i class="fa fa-angle-double-left"></i> Back</a>
 
-				<a href="#" class="forgot_password">Forgot password?</a>
+						</div>
+						<div class="one_half last">
+                            
+                            <asp:Button CausesValidation="false"  ID="Button1" CssClass="btn btn_red login_btn_asp" runat="server" Text="Login" OnClick="Button1_Click" ></asp:Button>
+                            
+						</div>
+                        
+					</div>
+				</div>
+
+				<a href="#" style="color: #7A1900;" class="forgot_password" onmouseover="this.style.color='#000000'" onmouseout="this.style.color='#7A1900'">Forgot password?</a>
 			</div>
 
 			<!-- Register Form -->
 			<div class="user_register">
-				<form>
+				<div >
 					<label>Full Name</label>
 					<input type="text" />
 					<br />
@@ -104,11 +113,12 @@
 						<label for="send_updates">Send me occasional email updates</label>
 					</div>
 
-					<div class="action_btns">
+					<div class="action_btns" >
 						<div class="one_half"><a href="#" class="btn back_btn"><i class="fa fa-angle-double-left"></i> Back</a></div>
-						<div class="one_half last"><a href="#" class="btn btn_red">Register</a></div>
+						
+                        <asp:Button ID="Button2" runat="server" CssClass="btn btn_red login_btn_asp btn_signup" Text="Register" OnClick="Button2_Click" />
 					</div>
-				</form>
+				</div>
 			</div>
 		</section>
 	</div>
@@ -144,7 +154,11 @@
 
     })
 </script>
-    </div>
+    
+    
+    
+        </form>
+    <div runat="server" id="logged"></div>
     </div> <!-- end of menu -->
 <div id="templatemo_container" runat="server">
 	
@@ -153,10 +167,10 @@
     
     <asp:ContentPlaceHolder ID="Content1" runat="server"></asp:ContentPlaceHolder>
     
-    <div id="templatemo_footer" runat="server">
+    <div id="templatemo_footer">
     
-	       <a href="subpage.html" runat="server">Дома</a> | <a href="subpage.html" runat="server">Книги</a> | <a href="#" runat="server">За нас</a> | <a href="#" runat="server">ЧПП</a><br />
-        Copyright © 2024 <a href="#" runat="server"><strong runat="server">Danche</strong></a> | Designed by Danica Nikoloska & Goran Gjorgievski	</div> 
+	       <a href="subpage.html">Дома</a> | <a href="subpage.html">Книги</a> | <a href="#" >За нас</a> | <a href="#">ЧПП</a><br />
+        Copyright © 2024 <a href="#" ><strong >Danche</strong></a> | Designed by Danica Nikoloska & Goran Gjorgievski	</div> 
     <!-- end of footer -->
 <!--  Free CSS Template www.templatemo.com -->
 </div> <!-- end of container -->
