--- a/MasterPage.master
+++ b/MasterPage.master
@@ -8,8 +8,8 @@
 <title runat="server">Book Store Template, Free CSS Template, CSS Website Layout</title>
 <meta runat="server" name="keywords" content="Book Store Template, Free CSS Template, CSS Website Layout, CSS, HTML" />
 <meta runat="server" name="description" content="Book Store Template, Free CSS Template, Download CSS Website" />
-<link runat="server" href="css/design.css" rel="stylesheet" type="text/css" />
-<link runat="server" href="css/style.css" rel="stylesheet" type="text/css" />
+<link  href="css/design.css" rel="stylesheet" type="text/css" />
+<link  href="css/style.css" rel="stylesheet" type="text/css" />
  <script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src="js/jquery.leanModal.min.js"></script>
 </head>
@@ -83,7 +83,7 @@
 						</div>
 						<div class="one_half last">
                             
-                            <asp:Button UseSubmitBehavior="false" OnClientClick="return false;" OnClick="Button1_Click" CausesValidation="false"  ID="Button1" CssClass="btn btn_red login_btn_asp" runat="server" Text="Login"  ></asp:Button>
+                            <asp:Button  OnClick="Button1_Click" CausesValidation="false"  ID="Button1" CssClass="btn btn_red login_btn_asp" runat="server" Text="Login"  ></asp:Button>
                             
 						</div>
                         
