--- a/css/style.css
+++ b/css/style.css
@@ -23,10 +23,14 @@
    
 }
 
-#modal_trigger {margin: 0 0 0 175px; width:100px; display:inline;
+#modal_trigger {  display:inline;
     height: 15px; 
     background: white;
     color: #7A1900;
+    overflow: visible;
+    position: absolute;
+    left: 72.6%;
+    top: 5px;
    
 }
 
