--- a/css/style.css
+++ b/css/style.css
@@ -28,11 +28,17 @@
     background: white;
     color: #7A1900;
     overflow: visible;
-    position: absolute;
-    left: 980px;
-    top: 5px;
+    float:right;
+    margin-right: -63px;
+    margin-bottom: 3px;
+    border-top: 2px solid #7A1900;
+    border-left: 2px solid #7A1900;
+   
+    
+    
    
 }
+    
 
 .btn {padding:10px 20px; background: #EBE2C3;}
 .btn_red {background: url('images/header-bg.jpg') repeat; color: #FFF;}
