--- a/css/design.css
+++ b/css/design.css
@@ -151,6 +151,23 @@ img {
 
 /* end of menu*/
 
+.addBook {
+	clear: both;
+	width: 940px;
+	height: 500px;
+	margin-bottom:50px;
+  	padding: 0 0;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: auto;
+}
+.addBook h2 {
+    color:#E62E00;
+    margin:auto;
+    padding-top:30px;
+    padding-left:15px;
+    
+    }
 /* header */
 #templatemo_header {
 	clear: both;
@@ -211,6 +228,7 @@ img {
 
 
 /* content */
+
 #templatemo_content {
 	clear: both;
 	width: 920px;
