--- a/css/design.css
+++ b/css/design.css
@@ -161,11 +161,23 @@ img {
     margin-right: auto;
     margin-top: auto;
 }
-.addBook h2 {
+.addBook h1 {
     color:#E62E00;
     margin:auto;
-    padding-top:30px;
-    padding-left:15px;
+    padding-top:40px;
+    padding-left:35px;
+    
+    }
+.addBook .userData {
+font-size:18px;
+color:black;
+padding-left:33px;
+padding-top:70px;
+    
+    }
+.addBook .userData span{
+
+padding-top:10px;
     
     }
 /* header */
