--- a/MasterPage.master
+++ b/MasterPage.master
@@ -17,7 +17,7 @@
 <body >
 <form runat="server">
 <div id="templatemo_menu" >
-    <a href="#" id="add_oglas"  class="btn_add" style="border-top: 2px solid #7A1900;
+    <a href="addBook.aspx" id="add_oglas"  class="btn_add" style="border-top: 2px solid #7A1900;
     border-right: 2px solid #7A1900;
     padding:10px 20px; 
     background: white;
