--- a/css/design.css
+++ b/css/design.css
@@ -213,6 +213,15 @@ color:white;
     margin-top:10px;
     
 }
+.successful
+{
+    color:#7A1900;
+    font-size:15px;
+    margin-left:340px;
+    margin-top:10px;
+    
+}
+
 /*end of addBook page*/
 
 /*FAQ Page*/
