--- a/MasterPage.master
+++ b/MasterPage.master
@@ -12,6 +12,59 @@
 <link  href="css/style.css" rel="stylesheet" type="text/css" />
  <script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src="js/jquery.leanModal.min.js"></script>
+    <script type="text/javascript" src="js/jquery-ui.js"></script>
+    <script type="text/javascript" src="js/quickpager.jquery.js"></script>
+       <style type="text/css">
+
+
+
+
+
+
+
+       .paging li {
+           list-style: none;
+       }
+
+ul.simplePagerNav li{
+    display:block;
+    float: left;
+    padding: 3px;
+    margin-bottom: 10px;
+    font-family: georgia;
+}
+ul.simplePagerNav {
+  text-align: center;
+ 
+}
+
+ul.simplePagerNav li a{
+    color: #333;
+    text-decoration: none;
+}
+
+li.currentPage {
+	    background: red;
+        background: #EBE2C3;	
+}
+
+ul.simplePagerNav li.currentPage a {
+	color: #fff;	
+}
+
+
+
+
+
+
+</style> 
+    <script type="text/javascript">
+        $(document).ready(function () {
+
+
+            $("ul.paging").quickPager();
+        });
+    </script>
 </head>
 
 <body >
@@ -84,12 +137,12 @@
 			<div class="user_login">
 				<div>
 					<label>Емаил</label>
-					 <asp:TextBox id="email"  runat="server"></asp:TextBox>
+					 <asp:TextBox id="email" ValidationGroup="login"  runat="server"></asp:TextBox>
 					<br />
 
 					<label>Лозинка</label>
 					
-                     <asp:TextBox TextMode="Password"  ID="password" runat="server"></asp:TextBox>
+                     <asp:TextBox TextMode="Password" ValidationGroup="login"  ID="password" runat="server"></asp:TextBox>
 					<br />
 
 					<div class="checkbox">
@@ -104,7 +157,7 @@
 						</div>
 						<div class="one_half last">
                             
-                            <asp:Button  OnClick="Button1_Click" CausesValidation="false"  ID="Button1" CssClass="btn btn_red login_btn_asp" runat="server" Text="Најава"  ></asp:Button>
+                            <asp:Button ValidationGroup="login"  OnClick="Button1_Click" CausesValidation="false"  ID="Button1" CssClass="btn btn_red login_btn_asp" runat="server" Text="Најава"  ></asp:Button>
                             
 						</div>
                         
@@ -118,33 +171,33 @@
 			<div class="user_register" style="margin-top: 0px;">
 				<div >
 					<label>Име*</label>
-					<asp:TextBox ID="TextBox1" runat="server"></asp:TextBox>
-                    <asp:RequiredFieldValidator Font-Bold="true"  ControlToValidate="TextBox1" ForeColor="#B94629" ID="RequiredFieldValidator1" runat="server" ErrorMessage="Името е задолжително."></asp:RequiredFieldValidator>
+					<asp:TextBox ID="TextBox1" ValidationGroup="register" runat="server"></asp:TextBox>
+                    <asp:RequiredFieldValidator ValidationGroup="register" Font-Bold="true"  ControlToValidate="TextBox1" ForeColor="#B94629" ID="RequiredFieldValidator1" runat="server" ErrorMessage="Името е задолжително."></asp:RequiredFieldValidator>
 					<br />
                     <br />
 
                     <label>Презиме*</label>
-                    <asp:TextBox ID="TextBox2" runat="server"></asp:TextBox>
-                    <asp:RequiredFieldValidator Font-Bold="true"  ControlToValidate="TextBox2" ForeColor="#B94629" ID="RequiredFieldValidator2" runat="server" ErrorMessage="Презимето е задолжително."></asp:RequiredFieldValidator>
+                    <asp:TextBox ID="TextBox2" ValidationGroup="register" runat="server"></asp:TextBox>
+                    <asp:RequiredFieldValidator ValidationGroup="register" Font-Bold="true"  ControlToValidate="TextBox2" ForeColor="#B94629" ID="RequiredFieldValidator2" runat="server" ErrorMessage="Презимето е задолжително."></asp:RequiredFieldValidator>
 					<br />
                     <br />
 
 					<label>Емаил*</label>
-                    <asp:TextBox ID="TextBox3" runat="server"></asp:TextBox>
-                    <asp:RequiredFieldValidator Font-Bold="true" Margin="5px" ControlToValidate="TextBox3" ForeColor="#B94629" ID="RequiredFieldValidator3" runat="server" ErrorMessage="Емаил адресата е задолжителна."></asp:RequiredFieldValidator> <br />
-                    <asp:RegularExpressionValidator Font-Bold="true"  ControlToValidate="TextBox3" ForeColor="#B94629" ID="RegularExpressionValidator1" ValidationExpression="\w+([-+.]\w+)*@\w+([-.]\w+)*\.\w+([-.]\w+)*" runat="server" ErrorMessage="Невалидна емаил адреса."></asp:RegularExpressionValidator>
+                    <asp:TextBox ID="TextBox3" ValidationGroup="register" runat="server"></asp:TextBox>
+                    <asp:RequiredFieldValidator ValidationGroup="register" Font-Bold="true" Margin="5px" ControlToValidate="TextBox3" ForeColor="#B94629" ID="RequiredFieldValidator3" runat="server" ErrorMessage="Емаил адресата е задолжителна."></asp:RequiredFieldValidator> <br />
+                    <asp:RegularExpressionValidator ValidationGroup="register" Font-Bold="true"  ControlToValidate="TextBox3" ForeColor="#B94629" ID="RegularExpressionValidator1" ValidationExpression="\w+([-+.]\w+)*@\w+([-.]\w+)*\.\w+([-.]\w+)*" runat="server" ErrorMessage="Невалидна емаил адреса."></asp:RegularExpressionValidator>
 					<br />
 
                     <label>Адреса</label>
-                    <asp:TextBox ID="TextBox4" runat="server"></asp:TextBox>
+                    <asp:TextBox ID="TextBox4" ValidationGroup="register" runat="server"></asp:TextBox>
 
 					<br />
                     
 
                    
 					<label>Лозинка*</label>
-                    <asp:TextBox TextMode="Password" ID="TextBox6" runat="server"></asp:TextBox>
-                    <asp:RequiredFieldValidator Font-Bold="true"  ControlToValidate="TextBox6" ForeColor="#B94629" ID="RequiredFieldValidator4" runat="server" ErrorMessage="Лозинката е задолжителна."></asp:RequiredFieldValidator>
+                    <asp:TextBox ValidationGroup="register" TextMode="Password" ID="TextBox6" runat="server"></asp:TextBox>
+                    <asp:RequiredFieldValidator ValidationGroup="register" Font-Bold="true"  ControlToValidate="TextBox6" ForeColor="#B94629" ID="RequiredFieldValidator4" runat="server" ErrorMessage="Лозинката е задолжителна."></asp:RequiredFieldValidator>
 					<br />
                     <br />
 
@@ -158,7 +211,7 @@
 					<div class="action_btns" >
 						<div class="one_half"><a href="#" class="btn back_btn"><i class="fa fa-angle-double-left"></i> Назад</a></div>
 						
-                        <asp:Button ID="Button2" runat="server" CssClass="btn btn_red login_btn_asp btn_signup" Text="Регистрирај" OnClick="Button2_Click" />
+                        <asp:Button ID="Button2" ValidationGroup="register" runat="server" CssClass="btn btn_red login_btn_asp btn_signup" Text="Регистрирај" OnClick="Button2_Click" />
 					</div>
 				</div>
 			</div>
