--- a/MasterPage.master
+++ b/MasterPage.master
@@ -72,6 +72,7 @@ ul.simplePagerNav li.currentPage a {
 <div id="templatemo_menu" >
     <a href="addBook.aspx" id="add_oglas"  class="btn_add" style="border-top: 2px solid #7A1900;
     border-right: 2px solid #7A1900;
+    
     padding:10px 20px; 
     background: white;
     color: #7A1900;
@@ -83,7 +84,7 @@ ul.simplePagerNav li.currentPage a {
     text-align: center;
     width: 140px;
     margin-left: -62px;
-    margin-top: 12px;
+    margin-top: 13px;
     ">Додаj оглас</a>
     	<ul >
             <li ><a href="Default.aspx" class="current" >Дома</a></li>
@@ -95,9 +96,9 @@ ul.simplePagerNav li.currentPage a {
     	</ul>
     <div id="login" runat="server">
         <div class="container" >
-	<a id="modal_trigger"  href="#modal" class="btn">Најава/Регистрација</a>
+	<a id="modal_trigger" style="margin-bottom: -2px;"  href="#modal" class="btn">Најава/Регистрација</a>
 
-	<div id="modal" class="popupContainer" style="display:none; margin-top: -155px;">
+	<div id="modal" class="popupContainer" style="display:none; margin-top: -155px; border-right: 2px solid #7A1900; border-bottom: 2px solid #7A1900;">
 		<header class="popupHeader">
 			<span class="header_title">Најава</span>
 			<span class="modal_close">Затвори</span>
