--- a/css/style.css
+++ b/css/style.css
@@ -30,9 +30,10 @@
     overflow: visible;
     float:right;
     margin-right: -63px;
-    margin-bottom: 3px;
     border-top: 2px solid #7A1900;
     border-left: 2px solid #7A1900;
+    border-right: 2px solid #7A1900;
+    
        
 }
     
