--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@
     height: 15px; 
     background: white;
     color: #7A1900;
-    overflow: visible;
+    overflow: hidden;
     float:right;
     margin-right: -63px;
     border-top: 2px solid #7A1900;
