--- a/MasterPage.master
+++ b/MasterPage.master
@@ -19,6 +19,12 @@
        .paging li {
            list-style: none;
        }
+       #templatemo_menu ul {
+	padding: 13px 0 0 0;
+	margin: 0 0 0 250px;
+	list-style: none;
+	width: 100%;
+}
 
         ul.simplePagerNav li{
            display:block;
@@ -65,17 +71,17 @@
     padding:10px 20px; 
     background: white;
     color: #7A1900;
-    height: 15px; 
+    height: 17px; 
     overflow: visible;
     display:inline;
     float: left;
     text-decoration: none;
     text-align: center;
-    width: 140px;
+    width: 137px;
     margin-left: -62px;
-    margin-top: 13px;
+    margin-top: 11px;
     ">Додаj оглас</a>
-    	<ul >
+    	<ul style="margin:0 0 0 260px">
             <li ><a href="Default.aspx" class="current" >Дома</a></li>
             <li ><a href="Search.aspx" >Книги</a></li>
             <li ><a href="About.aspx" >За нас</a></li>            
@@ -84,7 +90,7 @@
             
     	</ul>
     <div id="login" runat="server">
-        <div class="container" >
+        <div class="container">
 	<a runat="server" id="modal_trigger" style="margin-bottom: -20px;overflow:hidden; border-bottom: 1px solid white;border-right: 2px solid #7A1900;"  href="#modal" class="btn">Најава/Регистрација</a>
 
 	<div id="modal" class="popupContainer" style="display:none; margin-top: -155px; border-right: 2px solid #7A1900; border-bottom: 2px solid #7A1900;">
@@ -245,7 +251,7 @@
         </div>
     <div runat="server" id="logged"></div>
     </div> <!-- end of menu -->
-<div id="templatemo_container" style="margin-top: 5px;" runat="server">
+<div id="templatemo_container" style="margin-top: 4px;" runat="server">
 	
     
     
@@ -255,7 +261,7 @@
     <div id="templatemo_footer">
     
 	       <a href="Default.aspx">Дома</a> | <a href="Search.aspx">Книги</a> | <a href="About.aspx" >За нас</a> | <a href="FAQs.aspx">ЧПП</a><br />
-        Copyright © 2024 <a href="#" ><strong >Danche</strong></a> | Designed by Danica Nikoloska & Goran Gjorgievski	</div> 
+        Copyright © 2014 <a href="#" ><strong ></strong></a> | Designed by Goran Gjorgievski &  Danica Nikoloska	</div> 
     <!-- end of footer -->
 
 </div> <!-- end of container -->
